welcome.lessons.welcome.variables.Variables.scala.error
Variables:3: error: type mismatch;
 found   : Null(null)
 required: Int
Note that implicit conversions are not applicable because they are ambiguous:
 both method Integer2intNullConflict in class LowPriorityImplicits of type (x: Null)Int
 and method Integer2int in object Predef of type (x: Integer)Int
 are possible conversion functions from Null(null) to Int
	var nbPas:Int=null
                      ^Variables:10: error: not found: value nbPas
while(nbPas != null){
      ^Variables:12: error: not found: value nbPas
	nbPas = nbPas - 1
        ^