welcome.lessons.welcome.variables.Variables.scala.code
while(!estSurBiscuit){
	
	var nbPas:Int=null
	nbPas = nbPas + 1
	avance()
}
if (estSurBiscuit){
	prendBiscuit()
}
while(nbPas != null){
	recule()
	nbPas = nbPas - 1
}
